<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_card_course"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="4dp"
    android:layout_marginTop="8dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="@color/home_next_class_background"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg_cour"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_text_course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="32dp"
            android:text="@string/course_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/ic_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="16dp"
            android:src="@drawable/ic_alarm_white_48dp"
            android:transitionName="alarm" />

        <TextView
            android:id="@+id/id_text_course_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/id_text_course_time_and_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/course_time_and_name"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/id_text_course_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/course_place"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="24dp"
            android:text="@string/course_detail"
            android:textColor="#ffffff" />
    </LinearLayout>


</android.support.v7.widget.CardView>