<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_card_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="4dp"
    android:layout_marginTop="8dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="@color/home_card_background"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg_card"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_text_elect_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/card_title"
            android:textColor="#ffffff"
            android:textSize="24sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="16dp"
            android:src="@drawable/ic_show_chart_white_48dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_text_card_rest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/card_rest"
                android:textSize="18sp"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/card_rest_ch"/>
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_height="wrap_content">-->

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_weight="0.5"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingTop="32dp"-->
                <!--android:paddingBottom="16dp"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/card_bill"-->
                <!--android:textColor="#ffffff" />-->

        <!--</LinearLayout>-->

    </LinearLayout>

</android.support.v7.widget.CardView>